test/MC/SVE/regression-tests/negative_tests/sve-st2w-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32E2Store4LSSZ
// Offset register Rm cannot be xzr
st2w {z12.s, z13.s}, p2, [x20, xzr, lsl #2]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
